change outline-offset to prevent overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,6 +80,7 @@ input, select {
     width: 100%;
     background-color: white;
     color: black;
+    outline-offset: -2px;
 }
 input, select, button, .btn {
     font-family: 'Cabin', sans-serif;
